<resources>
    <string name="app_name">Click Me</string>
    <string name="click">Click</string>
    <string name="iv_desription">An touch Icon</string>
    <string name="instructions">Hit the Button as many times as you can befor the timer runs out</string>
    <string name="play">Play</string>
    <string name="bt_text">Click Here!</string>
    <string name="timer">00:00</string>
    <string name="score">0</string>
    <string name="final_score">Final Score</string>
    <string name="return_to_title">Return to Title</string>
    <string name="play_again">Play Again</string>
    <string name="gamble_your_points">Gamble Your Points</string>
</resources>