<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="scoreViewModel"
            type="com.piexxi.clickme.ScoreViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_touch"
            android:contentDescription="@string/iv_desription" />

        <TextView
            android:id="@+id/tv_label"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textColor="@color/purple_700"
            android:text="@string/final_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_score"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textSize="72sp"
            android:textColor="@color/purple_700"
            android:text="@{scoreViewModel.finalscore.toString()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bt_gamble"
            android:text="@string/gamble_your_points"
            android:textSize="18sp"
            android:fontFamily="monospace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="20dp"
            android:visibility="@{scoreViewModel.hasGambled ? View.GONE : View.VISIBLE}"/>

        <Button
            android:id="@+id/bt_play"
            android:text="@string/play_again"
            android:textSize="18sp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="monospace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/bt_title"
            android:text="@string/return_to_title"
            android:textSize="18sp"
            android:fontFamily="monospace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="20dp" />

    </LinearLayout>
</layout>