<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lo_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <Button
            android:id="@+id/bt_one"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/purple_700"
            android:fontFamily="monospace"
            android:text="@string/bt_text"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_two"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/purple_500"
            android:fontFamily="monospace"
            android:text="@string/bt_text"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_three"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="monospace"
            android:text="@string/bt_text"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bt_four"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="monospace"
            android:text="@string/bt_text"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/timer"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/score"
            android:textColor="@color/purple_700"
            android:textSize="72sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>